package marcredito.model;

public class Prestamista extends Usuario {
    public Prestamista(String id, String nombre, String correo) {
        super(id, nombre, correo);
    }
}
