package marcredito.model;

public class Solicitante extends Usuario {
    public Solicitante(String id, String nombre, String correo) {
        super(id, nombre, correo);
    }
}
